#  _____ _____  ____  __ _____ 
# |  ___|_ _\ \/ /  \/  | ____|
# | |_   | | \  /| |\/| |  _|  
# |  _|  | | /  \| |  | | |___ 
# |_|   |___/_/\_\_|  |_|_____|
#                              

# For a program:
# bin_PROGRAMS = foo
# foo_SOURCES = foo.c foo.h

# For a (libtool) library:
# lib_LTLIBRARIES = libfoo.la
# libfoo_la_SOURCES = libfoo.c libfoo.c
